Implement header changes for libguides, libcal, and libanswers

--- a/libanswers/custom-header.html
+++ b/libanswers/custom-header.html
@@ -25,18 +25,15 @@
         <div class="col-1 flex-item">
           <h3 class="heading-col">Start here</h3>
           <ul class="list-unbulleted">
-            <li><a href="https://libraries.mit.edu/quicksearch">Quick search <span class="about">Books, articles, and more at MIT</span></a></li>
-            <li><a href="https://libraries.mit.edu/vera">Vera <span class="about">E-journals &amp; databases</span></a></li>
-            <li><a href="https://libraries.mit.edu/barton">Barton catalog <span class="about">Classic catalog search</span></a></li>
+            <li><a href="https://libraries.mit.edu/search-collections">Search our collections <span class="about">Books, articles, and more</span></a></li>
             <li><a href="https://libraries.mit.edu/worldcat">WorldCat<span class="about">Books &amp; more worldwide</span></a></li>
-            <li><a href="https://libraries.mit.edu/barton-reserves">Course reserves</a></li>
+            <li><a href="https://libraries.mit.edu/search-reserves">Course reserves</a></li>
             <li><a href="https://libraries.mit.edu/search" class="bottom extra"><span>More search tools &amp; help</span> <span class="about">Images, data, DSpace, etc.</span></a></li>
           </ul>
         </div>
         <div class="col-2 flex-item">
           <h3 class="heading-col">Also try</h3>
           <ul class="list-unbulleted">
-            <li><a href="https://libraries.mit.edu/fulltext">FullText Finder <span class="about">Find specific citations</span></a></li>
             <li><a href="https://libraries.mit.edu/google-scholar-tips">Google Scholar for MIT <span class="about">Change settings to get better access</span></a></li>
             <li><a href="https://libraries.mit.edu/dspace">DSpace@MIT <span class="about">MIT research</span></a></li>
             <li><a href="https://libraries.mit.edu/dome">Dome <span class="about">MIT-digitized images, maps, etc.</span></a></li>
@@ -87,8 +84,8 @@
         <div class="col-1 flex-item">
           <h3 class="heading-col">Renew, request, suggest</h3>
           <ul class="list-unbulleted">
-            <li><a href="https://libraries.mit.edu/barton-account">Your Account - Barton <span class="about">Renew MIT items</span></a></li>
-            <li><a href="https://libraries.mit.edu/barton">Barton catalog <span class="about">Request items owned by MIT</span></a></li>
+            <li><a href="https://libraries.mit.edu/accounts">Accounts overview <span class="about">Your Account, ILLiad, Aeon, etc.</span></a></li>
+            <li><a href="https://libraries.mit.edu/search-collections">Search our collections <span class="about">Request items owned by MIT</span></a></li>
             <li><a href="https://libraries.mit.edu/worldcat">WorldCat <span class="about">Request items not owned by MIT</span></a></li>
             <li><a href="https://libraries.mit.edu/illiad">ILLiad <span class="about">Track your Interlibrary Borrowing requests</span></a></li>
             <li><a href="https://libraries.mit.edu/suggest-purchase">Suggest a purchase</a></li>
@@ -98,7 +95,6 @@
         <div class="col-2 flex-item">
           <h3 class="heading-col">More information</h3>
           <ul class="list-unbulleted">
-            <li><a href="https://libraries.mit.edu/accounts">Accounts overview <span class="about">Barton, ILLiad, Aeon, etc.</span></a></li>
             <li><a href="https://libraries.mit.edu/reserves">Course reserves &amp; TIP</a></li>
             <li><a href="https://libraries.mit.edu/borrow-direct">Borrow Direct <span class="about">Request items from Harvard, Yale, etc.</span></a></li>
             <li><a href="https://libraries.mit.edu/otherlibraries">Visit non-MIT libraries <span class="about">Harvard, Borrow Direct, etc.</span></a></li>
@@ -118,7 +114,6 @@
             <li><a href="https://libraries.mit.edu/ask">Ask us <span class="about">Email, chat, call, drop by</span></a></li>
             <li><a href="https://libraries.mit.edu/experts">Research guides &amp; expert librarians <span class="about">For every research interest</span></a></li>
             <li><a href="https://libraries.mit.edu/authenticate">Authenticate to online resources <span class="about">Tips &amp; tricks</span></a></li>
-            <li><a href="https://libraries.mit.edu/new-books">New books by subject <span class="about">Browse or subscribe to RSS feeds</span></a></li>
             <li><a href="https://libraries.mit.edu/research-support" class="bottom">More research support</a></li>
           </ul>
         </div>
