Updates to 'Research support' submenu from UXWS-943

--- a/libguides/custom-header.html
+++ b/libguides/custom-header.html
@@ -134,8 +134,7 @@
           <ul class="list-unbulleted">
             <li><a href="https://libraries.mit.edu/references">Citation &amp; writing tools <span class="about">Mendeley, Zotero, &amp; Overleaf</span></a></li>
             <li><a href="https://libraries.mit.edu/citing">Citing sources <span class="about">Avoid plagiarism, format references, etc.</span></a></li>
-            <li><a href="https://libraries.mit.edu/manage-info">Manage your info &amp; data <span class="about">Organize your data, files, and more</span></a></li>
-            <li><a href="https://libraries.mit.edu/publishing">Getting published <span class="about">Tools &amp; help</span></a></li>
+            <li><a href="https://libraries.mit.edu/data-services">Data services <span class="about">GIS, data management, statistical support</span></a></li>
             <li><a href="https://libraries.mit.edu/scholarly">Scholarly publishing <span class="about">Open access &amp; copyright</span></a></li>
             <li><a href="https://libraries.mit.edu/apis">APIs for scholarly resources</a></li>
           </ul>
