--- a/libcal/custom-header.html
+++ b/libcal/custom-header.html
@@ -25,10 +25,10 @@
         <div class="col-1 flex-item">
           <h3 class="heading-col">Start here</h3>
           <ul class="list-unbulleted">
+            <li><a href="https://libraries.mit.edu/search">Search tools home</a></li>
             <li><a href="https://libraries.mit.edu/search-collections">Search our collections <span class="about">Books, articles, and more</span></a></li>
             <li><a href="https://libraries.mit.edu/worldcat">WorldCat<span class="about">Books &amp; more worldwide</span></a></li>
             <li><a href="https://libraries.mit.edu/search-reserves">Course reserves</a></li>
-            <li><a href="https://libraries.mit.edu/search" class="bottom extra"><span>More search tools &amp; help</span> <span class="about">Images, data, DSpace, etc.</span></a></li>
           </ul>
         </div>
         <div class="col-2 flex-item">
@@ -51,6 +51,7 @@
         <div class="col-1 flex-item">
           <h3 class="heading-col">Locations</h3>
           <ul class="list-unbulleted">
+            <li><a href="https://libraries.mit.edu/hours">Hours and locations home</a></li>
             <li><a href="https://libraries.mit.edu/barker">Barker Library</a></li>
             <li><a href="https://libraries.mit.edu/dewey">Dewey Library</a></li>
             <li><a href="https://libraries.mit.edu/hayden">Hayden Library</a></li>
@@ -58,7 +59,6 @@
             <li><a href="https://libraries.mit.edu/distinctive-collections">Distinctive Collections</a></li>
             <li><a href="https://libraries.mit.edu/music">Lewis Music Library</a></li>
             <li><a href="https://libraries.mit.edu/lsa">Library Storage Annex</a></li>
-            <li><a href="https://libraries.mit.edu/hours" class="bottom">All hours &amp; locations</a></li>
           </ul>
         </div>
         <div class="col-2 flex-item">
@@ -84,12 +84,12 @@
         <div class="col-1 flex-item">
           <h3 class="heading-col">Renew, request, suggest</h3>
           <ul class="list-unbulleted">
+            <li><a href="https://libraries.mit.edu/borrow">Borrow &amp; request home</a></li>
             <li><a href="https://libraries.mit.edu/accounts">Accounts overview <span class="about">Your Account, ILLiad, Aeon, etc.</span></a></li>
             <li><a href="https://libraries.mit.edu/search-collections">Search our collections <span class="about">Request items owned by MIT</span></a></li>
             <li><a href="https://libraries.mit.edu/worldcat">WorldCat <span class="about">Request items not owned by MIT</span></a></li>
             <li><a href="https://libraries.mit.edu/illiad">ILLiad <span class="about">Track your Interlibrary Borrowing requests</span></a></li>
             <li><a href="https://libraries.mit.edu/suggest-purchase">Suggest a purchase</a></li>
-            <li><a href="https://libraries.mit.edu/borrow" class="bottom">More options &amp; help</a></li>
           </ul>
         </div>
         <div class="col-2 flex-item">
@@ -111,10 +111,10 @@
         <div class="col-1 flex-item">
           <h3 class="heading-col">Help &amp; useful tools</h3>
           <ul class="list-unbulleted">
+            <li><a href="https://libraries.mit.edu/research-support">Research support home</a></li>
             <li><a href="https://libraries.mit.edu/ask">Ask us <span class="about">Email, chat, call, drop by</span></a></li>
             <li><a href="https://libraries.mit.edu/experts">Research guides &amp; expert librarians <span class="about">For every research interest</span></a></li>
             <li><a href="https://libraries.mit.edu/authenticate">Authenticate to online resources <span class="about">Tips &amp; tricks</span></a></li>
-            <li><a href="https://libraries.mit.edu/research-support" class="bottom">More research support</a></li>
           </ul>
         </div>
         <div class="col-2 flex-item">
@@ -138,7 +138,7 @@
         <div class="col-1 flex-item">
           <h3 class="heading-col">About the Libraries</h3>
           <ul class="list-unbulleted">
-            <li><a href="https://libraries.mit.edu/about/">About us</a></li>
+            <li><a href="https://libraries.mit.edu/about/">About us home</a></li>
             <li><a href="https://libraries.mit.edu/contact">Contact us</a></li>
             <li><a href="https://libraries.mit.edu/jobs">Jobs</a></li>
             <li><a href="https://libraries.mit.edu/giving">Giving to the MIT Libraries</a></li>
