--- a/libcal/custom-header.html
+++ b/libcal/custom-header.html
@@ -26,7 +26,7 @@
           <h3 class="heading-col">Start here</h3>
           <ul class="list-unbulleted">
             <li><a href="https://libraries.mit.edu/search">Search tools home</a></li>
-            <li><a href="https://libraries.mit.edu/search-collections">Search our collections <span class="about">Books, articles, and more</span></a></li>
+            <li><a href="https://libraries.mit.edu/search-collections">Search Our Collections <span class="about">Books, articles, and more</span></a></li>
             <li><a href="https://libraries.mit.edu/worldcat">WorldCat<span class="about">Books &amp; more worldwide</span></a></li>
             <li><a href="https://libraries.mit.edu/search-reserves">Course reserves</a></li>
           </ul>
@@ -86,7 +86,7 @@
           <ul class="list-unbulleted">
             <li><a href="https://libraries.mit.edu/borrow">Borrow &amp; request home</a></li>
             <li><a href="https://libraries.mit.edu/accounts">Accounts overview <span class="about">Your Account, ILLiad, Aeon, etc.</span></a></li>
-            <li><a href="https://libraries.mit.edu/search-collections">Search our collections <span class="about">Request items owned by MIT</span></a></li>
+            <li><a href="https://libraries.mit.edu/search-collections">Search Our Collections <span class="about">Request items owned by MIT</span></a></li>
             <li><a href="https://libraries.mit.edu/worldcat">WorldCat <span class="about">Request items not owned by MIT</span></a></li>
             <li><a href="https://libraries.mit.edu/illiad">ILLiad <span class="about">Track your Interlibrary Borrowing requests</span></a></li>
             <li><a href="https://libraries.mit.edu/suggest-purchase">Suggest a purchase</a></li>
